# showtix4u-venues

./: .gitignore  .prettierignore  AGENTS.md  AI-INSTRUCTIONS.md  CLAUDE.md  PLAN.md  README.md  biome.json  converged-plan.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/: copilot-instructions.md
Completed/: 11130.html  11384.html  11964.html  12085.html  12121.html  12240.html  12326.html  12374.html  13981.html  17310.html  17864.html  18021.html  18078.html  18081.html  18138.html  18832.html  18850.html  18912.html  19011.html  19052.html  19188.html  19201.html  19223.html  19225.html  19531.html  19716.html  19982.html  20158.html  20179.html  20185.html  20274.html  20276.html  20357.html  20441.html  20551.html  20677.html  20848.html  20890.html  20902.html  20996.html  (+976 more)
builder/: index.html  package.json  tsconfig.json  vite.config.ts
builder/src/: main.ts  numbering.ts  seat-colors.ts  section-builder.ts  styles.css  table-builder.ts  types.ts
html/: 10056.html  10375.html  11039.html  11086.html  11130.html  11384.html  11516.html  11923.html  11964.html  12031.html  12085.html  12121.html  12240.html  12326.html  12374.html  12381.html  13981.html  17032.html  17291.html  17310.html  17450.html  17471.html  17676.html  17864.html  18021.html  18078.html  18081.html  18138.html  18794.html  18832.html  18850.html  18871.html  18912.html  19011.html  19042.html  19052.html  1915.html  19188.html  19201.html  19223.html  (+3106 more)
scripts/: download-venue.sh  normalize-inline-styles.py  upload-venue.sh
utils/: ReservedSeating.scss
